--- a/Men-Fashion/appsettings.json
+++ b/Men-Fashion/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=MSI\\DINHTHANH;uid=sa;pwd=12345;Database=MenShop;TrustServerCertificate=True"
+  }
 }
