--- a/Men-Fashion/appsettings.json
+++ b/Men-Fashion/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=MSI\\DINHTHANH;uid=sa;pwd=12345;Database=MenShop;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Issuer": "https://localhost:7095",
+    "Audience": "https://localhost:7095",
+    "key": "jLppf2Fmf5mW2UqjH2hq4T8zXN5ghZxN"
   }
 }
