--- a/Men-Fashion/appsettings.json
+++ b/Men-Fashion/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MSI\\DINHTHANH;uid=sa;pwd=12345;Database=MenShop;TrustServerCertificate=True"
+    "DefaultConnection": "Server=LAPTOP-I2GP951T\\SQLEXPRESS;uid=sa;pwd=12345;Database=MenShop;TrustServerCertificate=True"
   },
   "Jwt": {
     "Issuer": "https://localhost:7095",
